// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works with elements 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 1.5;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: black;
}

.c1 {
  list-style-type: disc;
  list-style-position: inside;
}

<div
  className="c0"
>
  <ul
    className="c1"
  >
    <li
      className=""
    >
      <p>
        hello
      </p>
    </li>
    <li
      className=""
    >
      <p>
        world
      </p>
    </li>
  </ul>
</div>
`;

exports[`it works with ordered 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 1.5;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: black;
}

.c1 {
  list-style-type: decimal;
  list-style-position: inside;
}

<div
  className="c0"
>
  <ol
    className="c1"
  >
    <li
      className=""
    >
      hello
    </li>
    <li
      className=""
    >
      world
    </li>
  </ol>
</div>
`;

exports[`it works with strings 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 1.5;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: black;
}

.c1 {
  list-style-type: disc;
  list-style-position: inside;
}

<div
  className="c0"
>
  <ul
    className="c1"
  >
    <li
      className=""
    >
      hello
    </li>
    <li
      className=""
    >
      world
    </li>
  </ul>
</div>
`;

exports[`it works with unordered 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 1.5;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: black;
}

.c1 {
  list-style-type: disc;
  list-style-position: inside;
}

<div
  className="c0"
>
  <ul
    className="c1"
  >
    <li
      className=""
    >
      hello
    </li>
    <li
      className=""
    >
      world
    </li>
  </ul>
</div>
`;
